test/core/errors/builtin_types_error/zs/intfield65_error.zs
package intfield65_error;

struct WrongIntfield
{
    int<65> wrong;
};
